# scaLR

./: .buildinfo  .gitignore  .isort.cfg  .pre-commit-config.yaml  .style.yapf  CHANGELOG  LICENSE  README.md  config.md  config.yaml  config.yml  config_README.md  data_ingestion.py  eval.py  evaluate.py  extract_features.py  feature_extraction.py  genindex.html  index.html  modules.html  objects.inv  pipeline.html  pipeline.py  py-modindex.html  pyproject.toml  requirements.txt  revamped_config.yml  revamped_config_testing.yaml  revamped_pipeline.py  run.sh  scaLR_tutorial.ipynb  scalr.analysis.html  scalr.data.html  scalr.data.preprocess.html  scalr.data.split.html  scalr.feature.html  scalr.feature.scoring.html  scalr.feature.selector.html  scalr.html  scalr.nn.callbacks.html  (+9 more)
.doctrees/: environment.pickle  index.doctree  modules.doctree  pipeline.doctree  scalr.analysis.doctree  scalr.data.doctree  scalr.data.preprocess.doctree  scalr.data.split.doctree  scalr.doctree  scalr.feature.doctree  scalr.feature.scoring.doctree  scalr.feature.selector.doctree  scalr.nn.callbacks.doctree  scalr.nn.dataloader.doctree  scalr.nn.doctree  scalr.nn.loss.doctree  scalr.nn.model.doctree  scalr.nn.trainer.doctree  scalr.utils.doctree
.ipynb_checkpoints/: index-checkpoint.html  modules-checkpoint.html  pipeline-checkpoint.html  scalr-checkpoint.html  scalr.analysis-checkpoint.html  scalr.data-checkpoint.html  scalr.data.preprocess-checkpoint.html  scalr.data.split-checkpoint.html  scalr.feature-checkpoint.html  scalr.feature.scoring-checkpoint.html  scalr.nn-checkpoint.html  (+7 more)
(+426 files in other folders)
